# StarAnim

./: CMakeLists.txt  Camera.cpp  Camera.h  LightManager.cpp  LightManager.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Object.h  README.md  RenderManager.cpp  RenderManager.h  ShaderLoader.cpp  ShaderLoader.h  ShaderManager.cpp  ShaderManager.h  TestLight.h  TextureLoader.cpp  TextureLoader.h  Timer.cpp  Timer.h  Transform.h  main.cpp  test.cpp
Camera/: Camera.h
Light/: DirLight.cpp  DirLight.h  Light.cpp  Light.h  Light_include.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
Loader/: ShaderLoader.cpp  ShaderLoader.h  TextureLoader.cpp  TextureLoader.h
Model/: Mesh.cpp  Mesh.h  Model.cpp  Model.h
Object/: BaseObject.h  Object_include.h
Object/Model/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  Model_include.h
Object/Scene/: BaseScene.cpp  BaseScene.h  Flat.cpp  Flat.h  Scene_include.h  SkyBox.cpp  SkyBox.h
Scene/: BaseScene.cpp  BaseScene.h  Flat.cpp  Flat.h  SkyBox.cpp  SkyBox.h
Shader/: default.frag  default.vert  test_fragment  vertex
Shader/Ground/: grid.frag  grid.vert  ground.frag  ground.vert
Shader/Normal/: normal.frag  normal.geom  normal.vert
Shader/Shadow/: debug.frag  debug.vert  shadow.vert
